full layout mobile-bleedthrough styling issue

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -224,6 +224,10 @@ table.dataTable:not(.disable-pointer) > tbody > tr{
 	line-height: 30px;
 }
 
+.building-contact-wrapper  span.mobilelabel{
+	display:none;
+}
+
 .building-contact-delete{
 	opacity:0.4;
 }
